Added container variable to the flowchart function.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 
 <body>
-    <script src="js/flowChart.js" charset="utf-8"></script>
+    <script src="js/flowchart.js" charset="utf-8"></script>
     <script src="js/buildCharts.js" charset="utf-8"></script>
 </body>
