scatterplot js file added
Still a copy of flowchart :D

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 
 <body>
     <script src="js/flowchart.js" charset="utf-8"></script>
+    <script src="js/scatterplot.js" charset="utf-8"></script>
     <script src="js/buildCharts.js" charset="utf-8"></script>
 </body>
