Tried to make two flowcharts from one file, didn't work. Starting fresh with the streamchart.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+    <script src="js/streamchart.js" charset="utf-8"></script>
     <script src="js/flowchart.js" charset="utf-8"></script>
     <script src="js/scatterplot.js" charset="utf-8"></script>
     <script src="js/buildCharts.js" charset="utf-8"></script>
